# concepts

./: .gitignore  README.md  apprunner.yaml  concepts_with_classifiers.json  create_duckdb.py  entrypoint.sh  fetch_concepts_from_s3.py  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-cd.yml
.trunk/: trunk.yaml
app/: api.py
infra/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
scripts/: check_aws_credentials.py  create_duckdb.py  fetch_concepts_from_s3.py  fetch_concepts_from_s3.sh
