[project]
name = "concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "awscli>=1.37.25",
  "boto3>=1.36.25",
  "duckdb>=1.2.0",
  "fastapi[standard]>=0.115.8",
  "pulumi>=3.150.0",
  "pulumi-aws>=6.69.0",
  "pyramid>=2.0.2",
  "requests>=2.32.3",
]
